syntax = "proto3";
option optimize_for = SPEED; // 加快解析
option java_package="com.sky.hiwise.netty.tcp";   //指定生成到哪个包下
option java_outer_classname="Message"; // 外部类名, 文件名

//protobuf 可以使用message 管理其他的message
message GroupMessage {

    //定义一个枚举类型
    enum DataType {
        CustomerType = 0; //在proto3 要求enum的编号从0开始
        CarType = 1;
    }

    //用data_type 来标识传的是哪一个枚举类型
    DataType data_type = 1;

    //表示每次枚举类型最多只能出现其中的一个, 节省空间
    oneof dataBody {
        Customer customer = 2;
        Car car = 3;
    }

}


message Customer {
    int32 id = 1;//Customer类的属性
    string name = 2; //
}
message Car {
    int32 clueId=1;
    string title=2;
}